welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:3: warning: enclosing method estAdo has result type Unit: return value discarded
  return (a >= 13 && a <= 19)
  ^hasTeen:7: error: value || is not a member of Unit
  return (estAdo(a) || estAdo(b) || estAdo(c))
                    ^